--- a/update-clase-6/tarea-familia/tarea-familia.html
+++ b/update-clase-6/tarea-familia/tarea-familia.html
@@ -12,7 +12,7 @@
 <body>
     <form id="calculadora-integrantes">
         <label for="cantidad-integrantes">Seleccionar cantidad de integrantes en su familia.</label>
-        <input type="number" id="cantidad-integrantes" placeholder="Seleccionar">
+        <input type="number" id="cantidad-integrantes" name="cantidad-integrantes" min="1" placeholder="Seleccionar" class="">
         <button id="aniadir-cantidad-integrantes">Seleccionar</button>
 
         <div id="integrantes">
