--- a/update-clase-6/tarea-familia/tarea-familia.html
+++ b/update-clase-6/tarea-familia/tarea-familia.html
@@ -31,5 +31,6 @@
     </form>
     
     <script type="text/javascript" src="tarea-familia.js"></script>
+    <script type="text/javascript" src="js/tarea-familia.js"></script>
 </body>
 </html>
