Añade <ul> para guardar errores

--- a/update-clase-6/tarea-familia/tarea-familia.html
+++ b/update-clase-6/tarea-familia/tarea-familia.html
@@ -19,6 +19,14 @@
 
         </div>
 
+        <ul id="errores-integrantes">
+            
+        </ul>
+
+        <ul id="errores-edades">
+            
+        </ul>
+
         <button type="button" id="calcular" class="oculto">Calcular</button>
 
         <div id="calculos" class="oculto">
