--- a/update-clase-6/tarea-familia/tarea-familia.html
+++ b/update-clase-6/tarea-familia/tarea-familia.html
@@ -39,5 +39,6 @@
     </form>
     
     <script type="text/javascript" src="js/tarea-familia.js"></script>
+    <script type="text/javascript" src="js/tarea-familia-calculos.js"></script>
 </body>
 </html>
