Crea pruebas de validaciones y lo carga en .HTML

--- a/update-clase-6/tarea-familia/tarea-familia.html
+++ b/update-clase-6/tarea-familia/tarea-familia.html
@@ -40,5 +40,6 @@
     
     <script type="text/javascript" src="js/tarea-familia.js"></script>
     <script type="text/javascript" src="js/tarea-familia-calculos.js"></script>
+    <script type="text/javascript" src="js/tarea-familia-pruebas.js"></script>
 </body>
 </html>
