--- a/update-clase-6/tarea-familia/update-tarea-clase-6.html
+++ b/update-clase-6/tarea-familia/update-tarea-clase-6.html
@@ -23,7 +23,7 @@
 
     <form id="calculadora-edades" class="oculto">
 
-        <label for="cantidad-integrantes">Seleccionar cantidad de integrantes en su familia.</label>
+        <label for="cantidad-integrantes">Seleccionar la cantidad de personas.</label>
         <input type="number" id="cantidad-integrantes" name="cantidad-integrantes" min="1" placeholder="Seleccionar" class="">
         <button id="aniadir-cantidad-integrantes">Seleccionar</button>
 
@@ -53,7 +53,7 @@
 
     <form id="calculadora-sueldos" class="oculto">
 
-        <label for="cantidad-personas">Seleccionar la cantidad de familiares</label>
+        <label for="cantidad-personas">Seleccionar la cantidad de personas.</label>
         <input type="number" id="cantidad-personas" name="cantidad-personas" min="1" placeholder="Cantidad" class="">
         <button id="confirmar-cantidad">Confirmar</button>
 
